Made 2 tests