@@ -10,6 +10,7 @@ sourceCompatibility = 1.11
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 def currentOS = org.gradle.internal.os.OperatingSystem.current()
@@ -21,7 +22,18 @@ if (currentOS.isWindows()) {
 } else if (currentOS.isMacOsX()) {
     platform = 'mac'
 }
+
+/*test{
+    scanForTestClasses = false
+
+    include "MakeAccountTest"
+    include "CheckDataTest"
+}*/
+
+
 dependencies {
+    testCompile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
     compile "org.openjfx:javafx-base:11:${platform}"
     compile "org.openjfx:javafx-graphics:11:${platform}"
     compile "org.openjfx:javafx-controls:11:${platform}"
@@ -48,14 +60,6 @@ compileJava {
     }
 }
 
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls,javafx.fxml'
-        ]
-    }
-}
 
 wrapper {
     gradleVersion = '5.2.1'
